aangevuld + taalkundige details

--- a/Thesis/abstract.tex
+++ b/Thesis/abstract.tex
@@ -22,29 +22,29 @@ Faculteit Wetenschappen\\
 %\noindent {\bf\Large Samenvatting}\\[1mm]
 \section*{Samenvatting}
 De exponenti\"ele groei van het internet geeft aanleiding tot een paradoxale
-situatie: hoe meer informatie er beschikbaar komt, hoe moeilijker het wordt
+situatie: hoe meer informatie beschikbaar komt, hoe moeilijker het wordt
 om binnen een redelijke tijd accurate informatie te vinden. Zoekmachines zijn momenteel
 de meest gebruikte online service, met miljoenen zoekopdrachten per dag. Naast het zoeken
 in teksten, groeit de aandacht voor zogenaamde multimedia zoeksystemen. 
 
-In het bijzonder maken de internetgebruikers steeds meer gebruik van zoekmachines die toelaten om 
-gigantische collecties van beelden te doorzoeken. Deze zoekmachines zijn echter nagenoeg 
-allemaal tekst-gebaseerd. Dit houdt in dat het zoeken enkel steunt op het vergelijken van opgegeven 
+In het bijzonder maken internetgebruikers steeds meer gebruik van zoekmachines die toelaten om 
+gigantische collecties van beelden te doorzoeken. Die zoekmachines zijn echter nagenoeg 
+allemaal tekstgebaseerd. Dat houdt in dat het zoeken enkel steunt op het vergelijken van opgegeven 
 trefwoorden met tekstuele annotaties die toegekend worden aan elk beeld. Het hoeft geen
-betoog dat het voor de gebruiker niet altijd gemakkelijk is om op deze manier een aanvaardbaar 
-resultaat te vinden. Bovendien worden deze annotaties grotendeels automatisch gegenereerd, 
+betoog dat het voor de gebruiker niet altijd gemakkelijk is om op die manier een aanvaardbaar 
+resultaat te vinden. Bovendien worden de annotaties grotendeels automatisch gegenereerd, 
 waardoor ze vaak weinig relevant zijn.
 
-De hierboven genoemde problemen kunnen opgelost worden door het zoeken te baseren op de inhoud 
-van de beelden. De bestaande inhoud-gebaseerde systemen kunnen echter nog altijd niet 
-toegepast worden op beeldencollecties van dergelijke grote omvang. In deze scriptie geven 
-we daarom een alternatief voor deze meer geavanceerde zoeksystemen, waarbij de grootte van 
+Door het zoeken te baseren op de inhoud van de beelden, kunnen de hierboven genoemde problemen 
+opgelost worden. De bestaande inhoudgebaseerde zoeksystemen zijn echter nog altijd niet 
+in staat beeldencollecties van zeer grote omvang te doorzoeken. In deze scriptie geven 
+we daarom een alternatief voor die inhoudgebaseerde systemen, waarbij de grootte van 
 de te doorzoeken collectie geen probleem vormt. 
 
-Dit alternatief kan gezien worden als een uitbreiding van de tekst-gebaseerde zoeksystemen.
-De zoekactie begint nog steeds met het specifi\"eren van \'e\'en of meerdere trefwoorden, waarop
+Dat alternatief kan gezien worden als een uitbreiding van de tekstgebaseerde zoeksystemen.
+De zoekactie begint nog steeds met het specificeren van \'e\'en of meerdere trefwoorden, waarop
 het systeem antwoordt met een lijst van relevante beelden. We zorgen er nu echter voor
-dat de gebruiker een aantal voorbeeld-beelden kan kiezen uit deze lijst, waarna het
+dat de gebruiker een aantal voorbeelden kan kiezen uit die lijst, waarna het
 systeem de zoekresultaten rangschikt op een manier die de gelijkenis met de voorbeelden uitbuit.
 
 Voor het modelleren van de graduele gelijkenis tussen beelden, maken we gebruik van 
