--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -17,8 +17,6 @@
 % lijst met woorden die LaTeX verkeerd splitst
 \hyphenation{vaag-ver-za-me-ling L-vaag-ver-za-me-ling} 
 
-\def\listfigurename{Lijst van figuren}
-
 
 \begin{document}
 
@@ -27,8 +25,8 @@
 
 \newcommand{\auteur}{Klaas Bosteels}
 \newcommand{\jaar}{2005--2006}
-\newcommand{\titel}{Similariteitsgebaseerd rangschikken van afbeeldingen in zoekmachines}
-\newcommand{\begeleider}{V. De Witte en S.\ Schulte}
+\newcommand{\titel}{Similariteitsgebaseerd rangschikken van beelden in zoekmachines}
+\newcommand{\begeleider}{drs.\ V.\ De Witte en S.\ Schulte}
 \newcommand{\richting}{licentiaat in de informatica, optie: software-ontwikkeling}
 
 %de volgende lijn kiest de juiste naam van de vakgroepvoorzitter en de promotor
@@ -60,6 +58,8 @@
 
 \input{fundamenten}
 
+\input{beeldverwerking}
+
 \input{similariteit}
 
 \input{pixelgeb}
@@ -70,12 +70,13 @@
 \chapter{Aggregatie}
 
 \section{Gecombineerde similariteitsmaten}
-\section{Meerdere voorbeeld-afbeeldingen}
+\section{Meerdere voorbeelden}
 
 
 \chapter{Implementatie}
 
 \section{Imilarity}
+\section{Imperforate}
 \section{Giggle}
 
 
