--- a/Thesis/beeldverwerking.tex
+++ b/Thesis/beeldverwerking.tex
@@ -2,7 +2,7 @@
 
 We zullen in het vervolg van deze scriptie ook gebruik maken van enkele
 begrippen en technieken uit beeldverwerking. In dit hoofdstuk geven we 
-een overzicht van die begrippen en beschrijven we kort de corresponderende 
+een overzicht van die begrippen en beschrijven we kort de verwante
 technieken.
 
 \section{Modellering van kleuren en beelden}
@@ -42,9 +42,9 @@ als } \max \{r,g,b\} = r \\[2pt] & = & 60 \cdot \frac{b - r}{\max \{r,g,b\} -
 \{r,g,b\}} & \\[6pt] v & = & \max \{r,g,b\}
 \end{array}
 $$ Als $s=0$ dan is $h$ niet gedefinieerd. Dat is logisch vermits we dan te 
-maken hebben met een grijswaarde. Indien $v=0$ dan is $s$ niet gedefinieerd. We 
+maken hebben met een grijswaarde. Indien $v=0$ dan zijn $s$ en $h$ niet gedefinieerd. We 
 hebben het in dat geval dan ook over puur zwart, waarvoor er geen kleurtint of 
-verzadiging kan gespecifieerd worden. In de praktische implementatie geven we 
+verzadiging kan gespecificeerd worden. In de praktische implementatie geven we 
 niet gedefinieerde componenten de waarde $0$.
 
 Een kleur in het Irb-model bestaat uit de volgende drie componenten 
@@ -73,9 +73,9 @@ $$
 In het XYZ-model wordt een kleur voorgesteld door de volgende drie componenten: 
 $$
 \begin{array}{rcl}
-x & = & 0.431 \cdot r+0.342 \cdot g+0.178 \cdot b \\ y & = & 0.222 \cdot 
-r+0.707 \cdot g+0.071 \cdot b \\ z & = & 0.020 \cdot r+0.130 \cdot g+0.939 
-\cdot b
+x & = & 0.4124 \cdot r + 0.3576 \cdot g + 0.1805 \cdot b \\
+y & = & 0.2126 \cdot r + 0.7152 \cdot g + 0.0722 \cdot b \\
+z & = & 0.0193 \cdot r + 0.1192 \cdot g + 0.9505 \cdot b
 \end{array}
 $$ met $(r,g,b) \in [0,1]^3$ de vector van de kleur in het RGB-model. Hierbij 
 is $y$ evenredig met de luminantie van de kleur in kwestie. 
@@ -91,18 +91,18 @@ tussen twee kleuren. De co\"ordinaten $(l,a,b)$ van een kleur in het
 L*a*b*-model kunnen als volgt benaderd worden 
 \cite{debaets:similariteitsmaten_voor_kleurbeelden, philips:beeldverwerking}: $$
 \begin{array}{rcl}
-l & = & 116 \cdot f(\frac{100 \cdot y}{y_0}) - 16 \\[5pt] a & = & 500 \cdot 
-\left(f(\frac{100 \cdot x}{x_0}) - f(\frac{100 \cdot y}{y_0})\right) \\[5pt] b & = & 200 \cdot 
-\left(f(\frac{100 \cdot y}{y_0}) - f(\frac{100 \cdot z}{z_0})\right)
+l & = & 116 \cdot f(\frac{100 \cdot y}{255 \cdot y_0}) - 16 \\[5pt] a & = & 500 \cdot 
+\left(f(\frac{100 \cdot x}{255 \cdot x_0}) - f(\frac{100 \cdot y}{255 \cdot y_0})\right) \\[5pt] b & = & 200 \cdot 
+\left(f(\frac{100 \cdot y}{255 \cdot y_0}) - f(\frac{100 \cdot z}{255 \cdot z_0})\right)
 \end{array}
 $$ met $$
 \begin{array}{rcll}
 f(t) & = & t^\frac{1}{3} & \textrm{als } t > 0.008856 \\ & = & 7.787 \cdot t + 
 \frac{16}{116} & \textrm{anders}
 \end{array}
-$$ voor elke re\"ele $t$. Hierbij zijn $x_0$, $y_0$ en $z_0$ de 
+$$ voor elke re\"ele $t$. Hierbij zijn $x_0$, $y_0$ en $z_0$ de
 XYZ-co\"ordinaten van een wit referentiepunt. We gebruiken hier 
-$(x_0,y_0,z_0)=(95.05,100,108.9)$.
+$255 \cdot (x_0,y_0,z_0)=(95.05,100,108.9)$.
 We kunnen dan als volgt normaliseren: $$ l' = \frac{l}{100} \qquad a' = \frac{120 + 
 \max\{\min\{a,120\},-120\}}{240} \qquad b' = \frac{120 + \max\{\min\{b,120\},-120\}}{240} $$
 
@@ -234,7 +234,23 @@ gebruiken, in tegenstelling tot de technieken die we
 tot nu toe bekeken hebben, een variabel kleurenpalet. De eerste techniek is gebaseerd op
 Kohonen neurale netwerken, terwijl de tweede gebruik maakt van dynamisch programmeren
 en principal analysis. NeuQuant geeft doorgaans iets betere resultaten, maar Wu's techniek is
-sneller.
+sneller. Uit figuur~\ref{fig:nuequant_vs_wu} blijkt echter dat het verschil in rekentijd zich
+enkel manifesteert als er naar een relatief groot aantal kleuren gekwantiseerd wordt. Voor een
+klein aantal kleuren is NeuQuant zelfs iets sneller.
+
+\begin{figure}[tbp]
+\begin{center}
+\subfigure[]{
+\includegraphics[width=0.4\textwidth]{plots/neuquant_vs_wu_small_filled.eps}
+\label{fig:neuquant_vs_wu_small}
+}
+\subfigure[]{
+\includegraphics[width=0.4\textwidth]{plots/neuquant_vs_wu_big_filled.eps}
+\label{fig:neuquant_vs_wu_big}
+}
+\caption{\label{fig:nuequant_vs_wu}Vergelijking van de rekentijden bij NeuQuant en Wu kwantisatie van (a) een klein en (b) een groot beeld.}
+\end{center}
+\end{figure}
 
 \subsection{Enkele voorbeelden}
 
@@ -263,9 +279,20 @@ sneller.
 We illustreren de bovenstaande technieken door ze toe te passen op de beelden uit 
 figuur~\ref{fig:kwantistatie_originelen}. De eerste twee van die beelden hebben we geconstueerd
 door in het HSV-model twee componenten te laten vari\"eren en \'e\'en component constant te houden.
-Bij figuur~\ref{fig:hsv_constant_s} is de verzadiging steeds gelijk aan $1$ en laten we de kleurtint 
-horizontaal en de helderheid vertikaal vari\"eren. Figuur~\ref{fig:hsv_constant_v} construeren we
-op een analoge manier, maar in dit geval is de helderheid constant.
+Bij figuur~\ref{fig:hsv_constant_s} is de verzadiging steeds gelijk aan $1$ en hebben we de kleurtint 
+horizontaal en de helderheid vertikaal laten vari\"eren. Figuur~\ref{fig:hsv_constant_v} werd 
+op een analoge manier geconstrueerd, maar in dit geval is de helderheid constant.
+De beelden die we bekomen door toepassing van de zes manieren om uniform te kwantiseren,
+worden weergegeven in figuur~\ref{fig:kwantistatie_uniform}. Figuur~\ref{fig:kwantistatie_niet-uniform}
+toont de resultaten van de vier niet-uniforme kwantistatietechnieken.
+
+De technieken met een variabel kleurenpalet doen het duidelijk beter dan diegene met een vast palet. 
+Anderzijds zijn de technieken met een vast kleurenpalet wel een stuk sneller. Bovendien is het soms niet
+gewenst dat voor alle beelden een andere verzameling van kleuren gebruikt wordt. In deze scriptie gebruiken
+we kwantisatie trouwens louter om meer performante similariteitsmaten te constueren. De visuele kwaliteit
+van de gekwantiseerde beelden is daarbij minder belangrijk. Similariteitsmaten op basis van kwantisatietechnieken 
+waarbij de gekwantiseerde beelden een lagere kwaliteit hebben, kunnen in bepaalde gevallen immers beter 
+presteren dan maten die gebaseerd zijn op ``betere'' kwantisatietechnieken.
 
 \begin{figure}[tbp]
 \begin{center}
@@ -315,9 +342,6 @@ op een analoge manier, maar in dit geval is de helderheid constant.
 \end{center}
 \end{figure}
 
-Figuur~\ref{fig:kwantistatie_uniform} toont de resultaten die we bekomen door toepassing van de 
-zes manieren om uniform te kwantiseren. 
-
 \begin{figure}[tbp]
 \begin{center}
 \subfigure[]{
@@ -348,7 +372,7 @@ zes manieren om uniform te kwantiseren.
 \includegraphics[height=2.8cm]{images/wu_autumn.eps}
 \label{fig:wu}
 }
-\caption{\label{fig:kwantistatie_uniform}De resultaten na niet-uniforme kwantisatie op basis van (a) SCT, (b) focale kleuren, (c) NeuQuant en (d) de Wu quantizer.}
+\caption{\label{fig:kwantistatie_niet-uniform}De resultaten na niet-uniforme kwantisatie op basis van (a) SCT, (b) focale kleuren, (c) NeuQuant en (d) de Wu quantizer.}
 \end{center}
 \end{figure}
 
@@ -375,7 +399,7 @@ $$
 = \frac{1}{16}\left[ \begin{array}{c} 1\\ 2\\ 1 \end{array} \right] \cdot 
 \left[ \begin{array}{ccc} 1 & 2 & 1 \end{array} \right]
 $$
-Zoals weergegeven in figuur~\ref{fig:indische_ruizig_en_binom}, kan een binomiaalfilter gebruikt worden om ruis te onderdrukken.
+Zoals ge\"illustreerd in figuur~\ref{fig:indische_ruizig_en_binom}, kan een binomiaalfilter gebruikt worden om ruis te onderdrukken.
 
 \begin{figure}[tb]
 \begin{center}
@@ -387,7 +411,7 @@ Zoals weergegeven in figuur~\ref{fig:indische_ruizig_en_binom}, kan een binomiaa
 \includegraphics[width=0.4\textwidth]{images/indische_binom.eps}
 \label{fig:indische_binom}
 }
-\caption{\label{fig:indische_ruizig_en_binom}Een ruizig beeld (a) en het resultaat na filteren met een 5x5 binomiaalfilter (b).}
+\caption{\label{fig:indische_ruizig_en_binom}Een ruizig beeld (a) en het resultaat na filteren met een binomiaalfilter (b).}
 \end{center}
 \end{figure}
 
@@ -400,7 +424,7 @@ dus de volgende formule gebruiken om randen te detecteren in $b$:
 $$
 |\nabla l(x,y)| = \sqrt{(D_1 l(x,y))^2 + (D_2 l(x,y))^2}
 $$ 
-met $l$ de $\mathbb{N}^2 - [0,1]$ afbeelding die met elk beeldpunt $(x,y)$ de juiste luminantiecomponent associeert.
+met $l$ de $\mathbb{N}^2 - [0,1]$ functie die met elk beeldpunt $(x,y)$ de juiste luminantiecomponent associeert.
 
 Doordat $l$ in de praktijk geen continue maar een discrete functie is, moeten we de partieel afgeleiden benaderen.
 De Taylorreeksontwikkeling van een $\mathbb{R} - \mathbb{R}$ functie $f$ rond $x$ geeft
@@ -431,7 +455,7 @@ $$
 Uit figuur~\ref{fig:randdetectie} blijkt echter dat beide technieken geen spectaculair verschillende 
 resultaten geven.
 
-\begin{figure}[tb]
+\begin{figure}[tbp]
 \begin{center}
 \subfigure[]{
 \includegraphics[width=0.3\textwidth]{images/lena.eps}
