--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -13,10 +13,10 @@ we naar \cite{kerre:vaagmodellen}, \cite{vanderweken:similariteitsmaten} en
 \subsection{Posets en tralies}
 \label{sectie:posets_en_tralies}
 
-In tegenstelling tot de meeste andere gebieden van de wiskunde, exploreert de theorie der 
-vaagverzamelingen het begrip ``orde'' ten volle \cite{kerre:vaagmodellen}. Daarom beginnen we deze 
+In tegenstelling tot de meeste andere gebieden van de wiskunde, wordt in de theorie der 
+vaagverzamelingen het begrip ``orde'' ten volle ge\"exploreerd \cite{kerre:vaagmodellen}. Daarom beginnen we deze 
 sectie met het defini\"eren van twee ordestructuren: \emph{partieel geordende verzameling} 
-(poset) en \emph{tralie}. We maken bovendien van de gelegenheid gebruik om enkele 
+(\emph{poset}) en \emph{tralie}. We maken bovendien van de gelegenheid gebruik om enkele 
 belangrijke begrippen in verband met posets te introduceren. 
 
 \begin{definitie}
@@ -28,7 +28,7 @@ transitief is:
   \item[(P.2)] $(\forall (x,y) \in P^2)(x \le y \land y \le x \Rightarrow x = y)$
   \item[(P.3)] $(\forall (x,y,z) \in P^3)(x \le y \land y \le z \Rightarrow x \le z)$
 \end{itemize}
-De relatie $\le$ noemt men een (parti\"ele) orderelatie over $P$.
+De relatie $\le$ wordt een (parti\"ele) orderelatie over $P$ genoemd.
 \end{definitie} 
 \begin{definitie}
 Zij $(P,\le)$ een poset en $A \subseteq P$. Een element $b$ van $P$ is een maximaal element
@@ -53,7 +53,7 @@ infimum voor $A$.
 \begin{definitie}
 Een poset $(L,\le)$ waarin elk doubleton een supremum en een infimum bezit, noemt men een tralie 
 (lattice). Als elke niet-ledige deelverzameling van $L$
-een supremum en een infimum bezit, dan spreekt men van een complete tralie.
+een supremum en een infimum bezit, dan is $(L, \le)$ een complete tralie.
 \end{definitie}
 % ALTERNATIEVE DEFINITIE VAN TRALIE
 %% enkele nieuwe commando's die we verder in deze sectie nodig zullen hebben
@@ -73,16 +73,16 @@ een supremum en een infimum bezit, dan spreekt men van een complete tralie.
 
 \subsection{Vaagverzamelingen}
 
-De collectie van alle mogelijke elementen noemen we het \emph{universum} (bijvoorbeeld de
-natuurlijke getallen). Een verzameling bevat bepaalde elementen uit dit universum (bijvoorbeeld de 
+Het \emph{universum} is de collectie van alle mogelijke elementen (bijvoorbeeld de
+natuurlijke getallen). Een verzameling bevat bepaalde elementen uit dat universum (bijvoorbeeld de 
 verzameling van de priemgetallen). 
 
-In het geval van een \emph{scherpe verzameling}, behoort elk 
+In het geval van een \emph{scherpe (deel)verzameling} behoort elk 
 element uit het universum wel of niet tot de verzameling. Andere mogelijkheden zijn er
 niet. Een dergelijke verzameling kan bijgevolg 
 gerepresenteerd worden door een \emph{karakteristieke afbeelding}, die elk element uit het 
-universum afbeeldt op 0 of 1. Dit getal noemen we de \emph{lidmaatschapsgraad} van het element 
-in kwestie. De klasse van scherpe verzamelingen in een universum $X$ stellen we voor door 
+universum afbeeldt op 0 of 1. Dat getal wordt de \emph{lidmaatschapsgraad} van het element 
+in kwestie genoemd. De klasse van scherpe verzamelingen in een universum $X$ stellen we voor door 
 $\mathcal{P}(X)$.
 \begin{definitie}
 Zij $X$ een universum. De karakteristieke afbeelding $\mu_A$ van een scherpe verzameling $A$ in $X$
@@ -97,7 +97,7 @@ $$
 \end{definitie}
 
 Bij een \emph{vaagverzameling} kunnen alle waarden tussen 0 en 1 als lidmaatschapsgraad 
-voorkomen. De karakteristieke afbeelding is in dit geval dus een $X - [0,1]$ afbeelding:
+voorkomen. De ``karakteristieke'' afbeelding is in dat geval dus een $X - [0,1]$ afbeelding:
 \begin{definitie}
 Zij $X$ een universum. Een vaagverzameling $A$ in $X$ wordt gekarakteriseerd door een $X - [0,1]$
 afbeelding  $\mu_A$:
@@ -110,8 +110,8 @@ $$
 \end{definitie}
 \noindent
 Een element $x \in X$ behoort dus tot de vaagverzameling $A$ met lidmaatschapsgraad $\mu_A(x)$.
-Voor de eenvoud zullen we in het vervolg $\mu_A(x)$ steeds noteren als $A(x)$. We zullen dus 
-met andere woorden geen onderscheid meer maken tussen de vaagverzameling en de 
+Voor de eenvoud noteren we in het vervolg $\mu_A(x)$ steeds als $A(x)$. We maken
+met andere woorden geen onderscheid tussen de vaagverzameling en de 
 lidmaatschapsfunctie. Voor de klasse van vaagverzamelingen in een universum $X$ gebruiken we
 de notatie $\mathcal{F}(X)$.
 
@@ -123,7 +123,7 @@ supp\ A = \{x \in X \mid A(x) > 0\}
 $$
 \end{definitie}
 \begin{definitie}
-De kern van een vaagverzameling $A$ in $X$ defini\"eren we als volgt:
+De kern van een vaagverzameling $A$ in $X$ wordt als volgt gedefinieerd:
 $$
 ker\ A = \{x \in X \mid A(x) = 1\}
 $$
@@ -131,7 +131,7 @@ $$
 \noindent
 Ook het begrip \emph{cardinaliteit} speelt vaak een belangrijke rol. De cardinaliteit van een 
 eindige scherpe verzameling wordt gegeven door het aantal elementen in die verzameling. 
-Dit concept kan uitgebreid worden naar vaagverzamelingen door gebruik te maken van het begrip 
+Dat concept kan uitgebreid worden naar vaagverzamelingen door gebruik te maken van het begrip 
 \emph{sigma count}:
 \begin{definitie}
 De sigma count van een vaagverzameling $A$ met eindige drager in een universum $X$ wordt
@@ -145,7 +145,7 @@ $$
 \label{sectie:bew_op_vaagverz}
 
 We beginnen met het defini\"eren van de begrippen \emph{negator}, \emph{conjunctor} en 
-\emph{disjunctor}. Deze operatoren zijn uitbreidingen van de klassieke logische operatoren
+\emph{disjunctor}. Die operatoren zijn uitbreidingen van de klassieke logische operatoren
 $\lnot$ (negatie), $\land$ (conjunctie) en $\lor$ (disjunctie).
 \begin{definitie}
 Een negator $\mathcal{N}$ op $[0,1]$ is een dalende $[0,1] - [0,1]$ afbeelding die voldoet
@@ -155,20 +155,20 @@ aan de randvoorwaarden $\mathcal{N}(0)=1$ en $\mathcal{N}(1)=0$.
 Een conjunctor $\mathcal{C}$ op $[0,1]$ is een stijgende $[0,1]^2 - [0,1]$ afbeelding die voldoet aan de
 randvoorwaarden $\mathcal{C}(0,0)=\mathcal{C}(0,1)=\mathcal{C}(1,0)=0$ en $\mathcal{C}(1,1)=1$. 
 Als een conjunctor voldoet aan 
-$(\forall a \in [0,1])(\mathcal{C}(1,a)=\mathcal{C}(a,1)=a)$ dan spreekt men van een semi-norm.
+$(\forall a \in [0,1])(\mathcal{C}(1,a)=\mathcal{C}(a,1)=a)$ dan is het een semi-norm.
 Een driehoeksnorm (t-norm) is een commutatieve en associatieve semi-norm.
 \end{definitie}
 \begin{definitie}
 Een disjunctor $\mathcal{D}$ op $[0,1]$ is een stijgende $[0,1]^2 - [0,1]$ afbeelding die voldoet
 aan de randvoorwaarden $\mathcal{D}(1,0)=\mathcal{D}(0,1)=\mathcal{D}(1,1)=1$ en 
 $\mathcal{D}(0,0)=0$. Als een disjunctor voldoet aan 
-$(\forall a \in [0,1])(\mathcal{D}(0,a)=\mathcal{D}(a,0)=a)$ dan spreekt met van een semi-conorm.
+$(\forall a \in [0,1])(\mathcal{D}(0,a)=\mathcal{D}(a,0)=a)$ dan is het een semi-conorm.
 Een driehoeksconorm (t-conorm) is een commutatieve en associatieve semi-conorm.
 \end{definitie}
 
 De meest gebruikte negator is de standaardnegator $N_s$. Het minimum $T_M$ en het algebra\"isch 
 product $T_P$ zijn veelgebruikte t-normen. Bij de t-conormen zijn het maximum $S_M$ en de
-probabilistische som $S_P$ dan weer populaire mogelijkheden. Deze operatoren worden als 
+probabilistische som $S_P$ dan weer populaire mogelijkheden. Die operatoren worden als 
 volgt gedefinieerd:
 $$
 \begin{array}{r@{\quad=\quad}l}
@@ -209,7 +209,7 @@ $$
 voor alle $x$ in $X$, met $\mathcal{D}$ een disjunctor.
 \end{definitie}
 
-In het vervolg van deze scriptie zullen we meestal 
+In het vervolg van deze scriptie zullen we steeds 
 $(\mathcal{N},\mathcal{C},\mathcal{D})=(N_s,T_M,S_M)$ kiezen. We voeren daarom de volgende
 verkorte notaties in:
 $$
@@ -221,13 +221,13 @@ A \setminus B  	& A \cap B^c \\
 A \triangle B 	& (A \setminus B) \cup (B \setminus A),
 \end{array}
 $$
-waarbij $A$ en $B$ vaagverzamelingen zijn.
+waarbij $A$ en $B$ vaagverzamelingen in een zelfde universum zijn.
 
 
 \subsection{L-vaagverzamelingen}
 
 Het begrip vaagverzameling kan op zijn beurt nog eens uitgebreid worden tot 
-\emph{L-vaagverzameling}. Deze uitbreiding is gebaseerd op het concept \emph{tralie}
+\emph{L-vaagverzameling}. Die uitbreiding is gebaseerd op het concept \emph{tralie}
 uit sectie~\ref{sectie:posets_en_tralies}.
 \begin{definitie}
 Zij $X$ een universum en $(L,\le)$ een complete tralie. Een L-vaagverzameling $A$ in $X$ wordt
@@ -241,17 +241,16 @@ $$
 \end{definitie}
 \noindent
 De klasse van L-vaagverzamelingen in een universum $X$ stellen we voor door 
-$\mathcal{F}_L(X)$. Merk op dat deze klasse zich herleidt tot $\mathcal{F}(X)$ voor $L = [0,1]$.
+$\mathcal{F}_L(X)$. Merk op dat die klasse zich herleidt tot $\mathcal{F}(X)$ voor $L = [0,1]$.
 
 \subsection{Bewerkingen op L-vaagverzamelingen}
 
-We kunnen de begrippen \emph{negator}, \emph{conjunctor} en 
-\emph{disjunctor} uitbreiden naar L-vaag\-ver\-za\-me\-ling\-en. Deze uitbreiding heeft als gevolg 
-dat de veralgemeende verzameltechnische bewerkingen $co$, $\cap$ en 
+De begrippen \emph{negator}, \emph{conjunctor} en 
+\emph{disjunctor} kunnen uitgebreid worden naar L-vaag\-ver\-za\-me\-ling\-en. Dat heeft als 
+gevolg dat de veralgemeende verzameltechnische bewerkingen $co$, $\cap$ en 
 $\cup$ uit \ref{sectie:bew_op_vaagverz} eveneens toepasbaar zijn op L-vaagverzamelingen.
-
-Zij $(L,\le)$ een complete tralie die $l$ als kleinste en $u$ als grootste element heeft. We
-defini\"eren:
+We geven hieronder de definities van die uitbreidingen.
+Hierbij is $(L,\le)$ een complete tralie die $l$ als kleinste en $u$ als grootste element heeft.
 \begin{definitie}
 Een negator $\mathcal{N}$ op $L$ is een dalende $L - L$ afbeelding die voldoet
 aan de randvoorwaarden $\mathcal{N}(l)=u$ en $\mathcal{N}(u)=l$. 
@@ -260,51 +259,52 @@ aan de randvoorwaarden $\mathcal{N}(l)=u$ en $\mathcal{N}(u)=l$.
 Een conjunctor $\mathcal{C}$ op $L$ is een stijgende $L^2 - L$ afbeelding die voldoet aan de
 randvoorwaarden $\mathcal{C}(l,l)=\mathcal{C}(l,u)=\mathcal{C}(u,l)=l$ en $\mathcal{C}(u,u)=u$. 
 Als een conjunctor voldoet aan 
-$(\forall a \in L)(\mathcal{C}(u,a)=\mathcal{C}(a,u)=a)$ dan spreekt men van een semi-norm.
+$(\forall a \in L)(\mathcal{C}(u,a)=\mathcal{C}(a,u)=a)$ dan is het een semi-norm.
 Een driehoeksnorm (t-norm) is een commutatieve en associatieve semi-norm.
 \end{definitie}
 \begin{definitie}
 Een disjunctor $\mathcal{D}$ op $L$ is een stijgende $L^2 - L$ afbeelding die voldoet
 aan de randvoorwaarden $\mathcal{D}(u,l)=\mathcal{D}(l,u)=\mathcal{D}(u,u)=u$ en 
 $\mathcal{D}(l,l)=l$. Als een disjunctor voldoet aan 
-$(\forall a \in L)(\mathcal{D}(l,a)=\mathcal{D}(a,l)=a)$ dan spreekt met van een semi-conorm.
+$(\forall a \in L)(\mathcal{D}(l,a)=\mathcal{D}(a,l)=a)$ dan is het een semi-conorm.
 Een driehoeksconorm (t-conorm) is een commutatieve en associatieve semi-conorm.
 \end{definitie}
 
 \section{Vaagsimilariteitsmaten}
 \label{sectie:vaagsimilariteitsmaten}
 
-Om de gelijkenis tussen twee vaagverzamelingen -- of tussen twee objecten die identificeerbaar 
-zijn met vaagverzamelingen -- na te gaan, kan men gebruik maken van \emph{vaagsimilariteitsmaten}. 
-Een dergelijke similariteitsmaat, voor het vergelijken van twee vaagverzamelingen in een 
+Het nagaan van de graduele gelijkenis tussen twee vaagverzamelingen -- of tussen twee objecten die 
+identificeerbaar zijn met vaagverzamelingen -- kan aan de hand van \emph{vaagsimilariteitsmaten}. 
+Een dergelijke similariteitsmaat voor het vergelijken van twee vaagverzamelingen in een 
 universum $X$, is niets meer dan een vaagverzameling in $\mathcal{F}(X) \times \mathcal{F}(X)$. De 
-lidmaatschapsgraad van een koppel $(A,B) \in (\mathcal{F}(X))^2$ nadert hierbij naar 1 naarmate 
-de similariteit tussen de vaagverzamelingen $A$ en $B$ groter is.
+lidmaatschapsgraad van een koppel $(A,B) \in (\mathcal{F}(X))^2$ nadert daarbij naar 1 naarmate 
+de similariteit tussen de vaagverzamelingen $A$ en $B$ toeneemt.
 
 In \cite{vanderweken:similariteitsmaten} worden er 32 vaagsimilariteitsmaten voorgesteld: $M_1$, $M_2$,
 $M_3$, $M_4$, $M_5$, $M_{5c}$, $M_6$, $M_{6c}$, $M_7$, $M_{7c}$, $M_8$, $M_{8c}$, $M_9$, $M_{9c}$,
 $M_{10}$, $M_{10c}$, $M_{11}$, $M_{11c}$, $M_{12}$, $M_{13}$, $M_{14a}$, $M_{14b}$, $M_{14c}$, 
 $M_{16e}$, $M_{16h}$, $M_{17a}$, $M_{17b}$, $M_{I_3}$, $M_{I_{3c}}$, $M_{18c}$, $M_{20}$ en $M_{20c}$.
-We gaan deze echter niet allemaal gebruiken. Vooreerst beperken we ons voor
+We gaan die echter niet allemaal gebruiken. Vooreerst beperken we ons voor
 $$
 M_1(A,B) = 1 - \left(\frac{1}{|X|} \sum_{x \in X} | A(x) - B(x)|^r\right)^\frac{1}{r} \textrm{ met } 
 r \in \{1,2,3,\ldots\}
 $$ tot de keuzes
 $r=1,2,4$. De overeenkomstige similariteitsmaten noemen we $M_{1a}$, $M_{1b}$ en $M_{1c}$. Vermits
-$M_{1a}=M_{18c}$ hoeven we $M_{18c}$ dan niet meer te beschouwen. Bovendien zullen we ons enkel
+$M_{1a}=M_{18c}$ hoeven we $M_{18c}$ dan niet meer te beschouwen. 
+Bovendien zullen we ons enkel
 toespitsen op de maten die rechtstreeks uitbreidbaar zijn naar L-vaagverzamelingen met $L=[0,1]^3$. 
 Dit houdt in dat we enkel de maten beschouwen die op evidente wijze kunnen veralgemeend worden naar
-vaagverzamelingen in $\mathcal{F}_L(X) \times \mathcal{F}_L(X)$. De details van deze
+vaagverzamelingen in $\mathcal{F}_L(X) \times \mathcal{F}_L(X)$. De details van die
 uitbreiding behandelen we in \ref{sectie:pixelgeb_kleurbeelden}. 
 
-We komen zo uiteindelijk tot
+Zo komen we uiteindelijk tot
 de similariteitsmaten die worden weergegeven in tabel~\ref{tab:similatiteitsmaten}. 
-Alle vaagsimilariteitsmaten uit deze tabel zijn reflexief. Dit wil zeggen dat 
-voor elke maat $M$ geldt: $M(A,A)=1$. 
+Alle vaagsimilariteitsmaten uit die tabel zijn reflexief en symmetrisch. Dat wil zeggen dat 
+voor elke maat $M$ geldt: $M(A,A)=1$ en $M(A,B)=M(B,A)$. 
 
 \begin{table}[tbp]
 \begin{center}
-\begin{tabular}{|c|}
+\begin{tabular}{|l|}
 \hline
 \\[1pt]
 $
@@ -333,7 +333,7 @@ $
 \displaystyle M_8(A,B) & = & \displaystyle \frac{|A \cap B|}{\min (|A|,|B|)} \\[10pt]
 \displaystyle M_{8c}(A,B) & = & \displaystyle \frac{|A^c \cap B^c|}{\min (|A^c|,|B^c|)} \\[10pt]
 \end{array}
-\begin{array}{rcl}
+\begin{array}{@{\qquad}rcl}
 \displaystyle M_9(A,B) & = & \displaystyle \frac{\min (|A|,|B|)}{|A \cup B|} \\[10pt]
 \displaystyle M_{9c}(A,B) & = & \displaystyle \frac{\min (|A^c|,|B^c|)}{|A^c \cup B^c|} \\[10pt]
 \displaystyle M_{10}(A,B) & = & \displaystyle \frac{\max (|A|,|B|)}{|A \cup B|} \\[10pt]
@@ -352,7 +352,7 @@ $
 \begin{array}{rcl}
 \displaystyle M_{I_3}(A,B) & = & \displaystyle \frac{|(A \cap B) \cap (A^c \cap B^c)|}{|(A \cup B) \cap (A^c \cup B^c)|}
 \end{array}
-\begin{array}{rcl}
+\begin{array}{@{\qquad}rcl}
 \displaystyle M_{I_{3c}}(A,B) & = & \displaystyle \frac{|(A^c \cap B^c) \cup (A \cap B)|}{|(A^c \cup B^c) \cup (A \cup B)|}
 \end{array}
 $
