\max \{ \} ipv \max ( ) etc

--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -324,24 +324,24 @@ $
 \\[1pt]
 $
 \begin{array}{rcl}
-\displaystyle M_5(A,B) & = & \displaystyle \frac{\min (|A|,|B|)}{\max (|A|,|B|)} \\[10pt]
-\displaystyle M_{5c}(A,B) & = & \displaystyle \frac{\min (|A^c|,|B^c|)}{\max (|A^c|,|B^c|)} \\[10pt]
+\displaystyle M_5(A,B) & = & \displaystyle \frac{\min \{|A|,|B|\}}{\max \{|A|,|B|\}} \\[10pt]
+\displaystyle M_{5c}(A,B) & = & \displaystyle \frac{\min \{|A^c|,|B^c|\}}{\max \{|A^c|,|B^c|\}} \\[10pt]
 \displaystyle M_6(A,B) & = & \displaystyle \frac{|A \cap B|}{|A \cup B|} \\[10pt]
 \displaystyle M_{6c}(A,B) & = & \displaystyle \frac{|A^c \cap B^c|}{|A^c \cup B^c|} \\[10pt]
-\displaystyle M_7(A,B) & = & \displaystyle \frac{|A \cap B|}{\max (|A|,|B|)} \\[10pt]
-\displaystyle M_{7c}(A,B) & = & \displaystyle \frac{|A^c \cap B^c|}{\max (|A^c|,|B^c|)} \\[10pt]
-\displaystyle M_8(A,B) & = & \displaystyle \frac{|A \cap B|}{\min (|A|,|B|)} \\[10pt]
-\displaystyle M_{8c}(A,B) & = & \displaystyle \frac{|A^c \cap B^c|}{\min (|A^c|,|B^c|)} \\[10pt]
+\displaystyle M_7(A,B) & = & \displaystyle \frac{|A \cap B|}{\max \{|A|,|B|\}} \\[10pt]
+\displaystyle M_{7c}(A,B) & = & \displaystyle \frac{|A^c \cap B^c|}{\max \{|A^c|,|B^c|\}} \\[10pt]
+\displaystyle M_8(A,B) & = & \displaystyle \frac{|A \cap B|}{\min \{|A|,|B|\}} \\[10pt]
+\displaystyle M_{8c}(A,B) & = & \displaystyle \frac{|A^c \cap B^c|}{\min \{|A^c|,|B^c|\}} \\[10pt]
 \end{array}
 \begin{array}{@{\qquad}rcl}
-\displaystyle M_9(A,B) & = & \displaystyle \frac{\min (|A|,|B|)}{|A \cup B|} \\[10pt]
-\displaystyle M_{9c}(A,B) & = & \displaystyle \frac{\min (|A^c|,|B^c|)}{|A^c \cup B^c|} \\[10pt]
-\displaystyle M_{10}(A,B) & = & \displaystyle \frac{\max (|A|,|B|)}{|A \cup B|} \\[10pt]
-\displaystyle M_{10c}(A,B) & = & \displaystyle \frac{\max (|A^c|,|B^c|)}{|A^c \cup B^c|} \\[10pt]
-\displaystyle M_{11}(A,B) & = & \displaystyle \frac{\min (|A \setminus B|,|B \setminus A|)}{\max (|A \setminus B|,|B \setminus A|)} \\[10pt]
-\displaystyle M_{11c}(A,B) & = & \displaystyle \frac{\min (|(A \setminus B)^c|,|(B \setminus A)^c|)}{\max (|(A \setminus B)^c|,|(B \setminus A)^c|)} \\[10pt]
-\displaystyle M_{12}(A,B) & = & \displaystyle \frac{|(A \triangle B)^c|}{\max (|(A \setminus B)^c|,|(B \setminus A)^c|)} \\[10pt]
-\displaystyle M_{13}(A,B) & = & \displaystyle \frac{|(A \triangle B)^c|}{\min (|(A \setminus B)^c|,|(B \setminus A)^c|)}
+\displaystyle M_9(A,B) & = & \displaystyle \frac{\min \{|A|,|B|\}}{|A \cup B|} \\[10pt]
+\displaystyle M_{9c}(A,B) & = & \displaystyle \frac{\min \{|A^c|,|B^c|\}}{|A^c \cup B^c|} \\[10pt]
+\displaystyle M_{10}(A,B) & = & \displaystyle \frac{\max \{|A|,|B|\}}{|A \cup B|} \\[10pt]
+\displaystyle M_{10c}(A,B) & = & \displaystyle \frac{\max \{|A^c|,|B^c|\}}{|A^c \cup B^c|} \\[10pt]
+\displaystyle M_{11}(A,B) & = & \displaystyle \frac{\min \{|A \setminus B|,|B \setminus A|\}}{\max \{|A \setminus B|,|B \setminus A|\}} \\[10pt]
+\displaystyle M_{11c}(A,B) & = & \displaystyle \frac{\min \{|(A \setminus B)^c|,|(B \setminus A)^c|\}}{\max \{|(A \setminus B)^c|,|(B \setminus A)^c|\}} \\[10pt]
+\displaystyle M_{12}(A,B) & = & \displaystyle \frac{|(A \triangle B)^c|}{\max \{|(A \setminus B)^c|,|(B \setminus A)^c|\}} \\[10pt]
+\displaystyle M_{13}(A,B) & = & \displaystyle \frac{|(A \triangle B)^c|}{\min \{|(A \setminus B)^c|,|(B \setminus A)^c|\}}
 \end{array}
 $
 \\
